Enabling AQP queries, use 0.3 release, CHBenchApp and other cleanup