@@ -14,30 +14,30 @@
  * permissions and limitations under the License. See accompanying
  * LICENSE file.
  */
-package io.snappydata.adanalytics.benchmark
 
-import java.io.FileReader
+package io.snappydata.benchmark
 
-import com.opencsv.CSVReader
-import io.snappydata.adanalytics.aggregator.AdImpressionLog
-import io.snappydata.adanalytics.aggregator.Constants._
-import org.apache.spark.rdd.RDD
+import io.snappydata.adanalytics.aggregator.Configs._
+import io.snappydata.adanalytics.aggregator.{AdImpressionLog, AvroSocketStreamConverter}
 import org.apache.spark.sql.Row
-import org.apache.spark.streaming.{Duration, SnappyStreamingContext}
+import org.apache.spark.storage.StorageLevel
+import org.apache.spark.streaming.SnappyStreamingContext
 import org.apache.spark.{SparkConf, SparkContext}
 
-import scala.collection.mutable.Queue
-import scala.concurrent.ExecutionContext.Implicits.global
-import scala.concurrent.Future
-import scala.util.{Failure, Success}
-
-object CSVSnappyIngestionPerf extends App {
+/**
+  * Simple Snappy streaming program which pulls log messages
+  * from socket and ingest those log messages to Snappy store.
+  */
+object SocketSnappyIngestionPerf extends App {
 
   val sparkConf = new SparkConf()
     .setAppName(getClass.getSimpleName)
-    .setMaster("local[*]")
+    .setMaster(s"$sparkMasterURL")
+    //.setMaster("snappydata://localhost:10334")
     .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-
+    .set("spark.executor.extraJavaOptions",
+      " -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+AggressiveOpts -XX:FreqInlineSize=300 -XX:MaxInlineSize=300 ")
+    .set("spark.streaming.blockInterval", "50")
 
   val assemblyJar = System.getenv("PROJECT_ASSEMBLY_JAR")
   if (assemblyJar != null) {
@@ -47,13 +47,13 @@ object CSVSnappyIngestionPerf extends App {
 
   val sc = new SparkContext(sparkConf)
 
-  val snsc = new SnappyStreamingContext(sc, Duration(1000))
+  val snsc = new SnappyStreamingContext(sc, batchDuration)
 
   snsc.snappyContext.dropTable("adImpressions", ifExists = true)
 
-  val rddQueue = Queue[RDD[AdImpressionLog]]()
+  val converter = new AvroSocketStreamConverter
 
-  val logStream = snsc.queueStream(rddQueue)
+  val logStream = snsc.socketStream[AdImpressionLog](hostname, socketPort, converter.convert, StorageLevel.MEMORY_ONLY)
 
   val rows = logStream.map(v => Row(new java.sql.Timestamp(v.getTimestamp), v.getPublisher.toString,
     v.getAdvertiser.toString, v.getWebsite.toString, v.getGeo.toString, v.getBid, v.getCookie.toString))
@@ -65,35 +65,6 @@ object CSVSnappyIngestionPerf extends App {
 
   logStreamAsTable.foreachDataFrame(_.write.insertInto("adImpressions"))
 
-  val csvReader = Future {
-    import collection.JavaConverters._
-
-    val csvFile = new CSVReader(new FileReader("/home/ymahajan/git/" +
-      "snappy-poc/src/main/scala/io/snappydata/adanalytics/benchmark/adimpressions.csv"))
-    csvFile.iterator.asScala
-      .map { fields => {
-        val log = new AdImpressionLog()
-        log.setTimestamp(fields(0).toLong)
-        log.setPublisher(fields(1))
-        log.setAdvertiser(fields(2))
-        log.setWebsite(fields(3))
-        log.setGeo(fields(4))
-        log.setBid(fields(5).toDouble)
-        log.setCookie(fields(6))
-        log
-      }
-      }.grouped(100000).foreach { logs =>
-      val logRDD = sc.parallelize(logs, 8)
-      rddQueue += logRDD
-    }
-  }
-
-  csvReader.onComplete {
-    case Success(value) =>
-    case Failure(e) => e.printStackTrace
-  }
-
   snsc.start()
   snsc.awaitTermination()
-
 }
